k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3-mirror
  labels:
    name: s3-mirror
