k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-proxy
  namespace: s3-mirror
  labels:
    app: s3-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: s3-proxy
  template:
    metadata:
      labels:
        app: s3-proxy
    spec:
      containers:
        - name: s3-proxy
          image: ghcr.io/starburst997/k8s-s3-mirror:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
